add mixpanel tracking

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <meta property="og:image" content="http://www.episodeyang.com{{page.snippet}}"/>
     <meta property="og:description" content="{{page.excerpt | strip_html}}"/>
     {% include google-analytics.html %}
-    {% include kissmetric.html %}
+    {% include mixpanel.html %}
 </head>
 {{ content }}
 <script>
